# ASMR-analysis

./: .gitignore  JSONMetadataEnricher.py  README.md  analysis.py  common.py  default.config  default.secret  main.py  pyproject.toml
figures/: cluster_mean_views_per_day.eps  cluster_mean_views_per_day_tsne.eps  cluster_scatter_embedding.eps  cluster_scatter_embedding_pca.eps  cluster_scatter_embedding_tsne.eps  cluster_sizes.eps  cluster_sizes_tsne.eps  drive_trend_overall_fig.eps  duration_mean_engagement_rate.eps  duration_mean_views.eps  duration_mean_views_per_day.eps  duration_vs_views.eps  has_binaural_trend_overall_fig.eps  has_binaural_views_per_day_boxplot.eps  has_drive_views_per_day_boxplot.eps  has_no_talking_trend_overall_fig.eps  has_no_talking_views_per_day_boxplot.eps  has_sleep_views_per_day_boxplot.eps  has_whisper_views_per_day_boxplot.eps  language_growth_over_years.eps  language_mean_engagement_rate.eps  language_mean_views_per_day.eps  log_views_qq_plot.eps  monthly_video_counts.eps  sleep_seasonal_pattern_fig.eps  spacy_drive_whisper_barber.eps  spacy_keywords_both.eps  title_length_mean_engagement_rate.eps  title_length_mean_views.eps  wordcloud_both.eps  wordcloud_description.eps  wordcloud_descriptions.eps  wordcloud_title.eps  wordcloud_titles.eps  wordcloud_titles_descriptions.eps
