[project]
name = "asmr-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.187.0",
    "kaleido==0.2.1",
    "langdetect>=1.0.9",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pycountry>=24.6.1",
    "pytubefix>=10.3.4",
    "requests>=2.32.5",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.9.post2",
    "wordcloud>=1.9.4",
]
